--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -35,9 +35,9 @@
 
 <body>
     <div class="container-scroller">
-        <%- include('../partials/navbar.ejs' , {user, user}); %>
+        <%- include('../partials/navbar.ejs' , {user}); %>
             <div class="container-fluid page-body-wrapper">
-                <%- include('../partials/sidebar.ejs' , {user, user}); %>
+                <%- include('../partials/sidebar.ejs' , {user}); %>
                     <div class="main-panel">
                         <div class="content-wrapper">
                             <div class="row">
