--- a/views/location/edit.ejs
+++ b/views/location/edit.ejs
@@ -30,9 +30,9 @@
 
 <body class="sidebar-icon-only">
     <div class="container-scroller">
-        <%- include('../partials/navbar.ejs' , {user, user}); %>
+        <%- include('../partials/navbar.ejs' , {user}); %>
             <div class="container-fluid page-body-wrapper">
-                <%- include('../partials/sidebar.ejs' , {user, user}); %>
+                <%- include('../partials/sidebar.ejs' , {user}); %>
                     <!-- partial -->
                     <div class="main-panel">
                         <div class="content-wrapper">
