--- a/views/location/index.ejs
+++ b/views/location/index.ejs
@@ -33,12 +33,12 @@
 <body>
     <div class="container-scroller">
         <!-- partial:partials/_navbar.html -->
-        <%- include('../partials/navbar.ejs' , {user, user}); %>
+        <%- include('../partials/navbar.ejs' , {user}); %>
 
             <!-- partial -->
             <div class="container-fluid page-body-wrapper">
                 <!-- partial:partials/_sidebar.html -->
-                <%- include('../partials/sidebar.ejs' , {user, user}); %>
+                <%- include('../partials/sidebar.ejs' , {user}); %>
                     <!-- partial -->
                     <div class="main-panel">
                         <div class="content-wrapper">
