--- a/views/location/view.ejs
+++ b/views/location/view.ejs
@@ -27,9 +27,9 @@
 
 <body class="sidebar-icon-only">
     <div class="container-scroller">
-        <%- include('../partials/navbar.ejs' , {user, user}); %>
+        <%- include('../partials/navbar.ejs' , {user}); %>
             <div class="container-fluid page-body-wrapper">
-                <%- include('../partials/sidebar.ejs' , {user, user}); %>
+                <%- include('../partials/sidebar.ejs' , {user}); %>
                     <div class="main-panel">
                         <div class="content-wrapper">
                             <% if(location) {%>
