--- a/public/scss/vertical-layout-light/_variables.scss
+++ b/public/scss/vertical-layout-light/_variables.scss
@@ -7,11 +7,11 @@ $sidebar-light-bg: #F4F5F7;
 $sidebar-light-menu-color: #484848;
 $sidebar-light-submenu-color: $sidebar-light-menu-color;
 $sidebar-light-menu-active-bg: #fff;
-$sidebar-light-menu-active-color: #1F3BB3;
+$sidebar-light-menu-active-color: #1856a7;
 $sidebar-light-menu-hover-bg: #fff;
 $sidebar-light-menu-hover-color: #fff;
 $sidebar-light-submenu-hover-color: #000;
-$sidebar-light-submenu-active-color: #1F3BB3;
+$sidebar-light-submenu-active-color: #1856a7;
 $sidebar-light-menu-icon-color: $sidebar-light-menu-color;
 $sidebar-light-menu-arrow-color: #bfccda;
 $sidebar-light-profile-name-color: #404852;
