--- a/views/location/index.ejs
+++ b/views/location/index.ejs
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- endinject -->
     <!-- Plugin css for this page -->
@@ -35,64 +36,70 @@
         <!-- partial:partials/_navbar.html -->
         <%- include('../partials/navbar.ejs' , {user}); %>
 
+        <!-- partial -->
+        <div class="container-fluid page-body-wrapper">
+            <!-- partial:partials/_sidebar.html -->
+            <%- include('../partials/sidebar.ejs' , {user}); %>
             <!-- partial -->
-            <div class="container-fluid page-body-wrapper">
-                <!-- partial:partials/_sidebar.html -->
-                <%- include('../partials/sidebar.ejs' , {user}); %>
-                    <!-- partial -->
-                    <div class="main-panel">
-                        <div class="content-wrapper">
-                            <div class="row">
-                                <div class="col-lg-12 d-flex flex-column">
-                                    <div class="row flex-grow">
-                                        <div class="col-12 grid-margin stretch-card">
-                                            <div class="card card-rounded">
-                                                <div class="card-body">
-                                                    <div class="d-sm-flex justify-content-between align-items-start">
-                                                        <div>
-                                                            <h4 class="card-title card-title-dash">Locations</h4>
-                                                        </div>
-                                                        <div>
-                                                            <a href="/create-location" class="btn btn-primary btn-icon-text" type="button"><i class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add location</a>
-                                                        </div>
-                                                    </div>
-                                                    <br>
-
-                                                    <div class="table-responsive  mt-1">
-                                                        <table id="locations" class="table table-hover stripe">
-                                                            <thead>
-                                                                <tr>
-                                                                    <th>Name</th>
-                                                                    <th>Active</th>
-                                                                    <th>Action</th>
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                                <% for(const location of locations) { %>
-                                                                    <tr>
-                                                                        <td>
-                                                                            <a class="btn-link" href="/view-location/<%- location.id%>">
-                                                                                <%- location.name %>
-                                                                            </a>
-                                                                        </td>
-                                                                        <td>
-                                                                            <%- location.isActive ? "Yes" : "No" %>
-
-                                                                        </td>
-                                                                        <td>
-                                                                            <a href="/edit-location/<%- location.id%>?url=/locations" type="button" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                <i class="far fa-edit icon-sm"></i>
-                                                                            </a>
-                                                                            <a id="deleteBtn" onclick="return confirmDelete('/delete-location', '<%- location.id%>')" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                <i class="fas fa-trash-alt icon-sm text-danger"></i>
-                                                                            </a>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <%}%>
-                                                            </tbody>
-                                                        </table>
-                                                    </div>
+            <div class="main-panel">
+                <div class="content-wrapper">
+                    <div class="row">
+                        <div class="col-lg-12 d-flex flex-column">
+                            <div class="row flex-grow">
+                                <div class="col-12 grid-margin stretch-card">
+                                    <div class="card card-rounded">
+                                        <div class="card-body">
+                                            <div class="d-sm-flex justify-content-between align-items-start">
+                                                <div>
+                                                    <h4 class="card-title card-title-dash">Locations</h4>
                                                 </div>
+                                                <div>
+                                                    <a href="/create-location" class="btn btn-primary btn-icon-text"
+                                                        type="button"><i
+                                                            class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add
+                                                        location</a>
+                                                </div>
+                                            </div>
+                                            <br>
+
+                                            <div class="table-responsive  mt-1">
+                                                <table id="locations" class="table table-hover stripe">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Name</th>
+                                                            <th>Active</th>
+                                                            <th>Action</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <% for(const location of locations) { %>
+                                                        <tr>
+                                                            <td>
+                                                                <a class="btn-link"
+                                                                    href="/view-location/<%- location.id%>">
+                                                                    <%- location.name %>
+                                                                </a>
+                                                            </td>
+                                                            <td>
+                                                                <%- location.isActive ? "Yes" : "No" %>
+
+                                                            </td>
+                                                            <td>
+                                                                <a href="/edit-location/<%- location.id%>?url=/locations"
+                                                                    type="button"
+                                                                    class="btn btn-icon btn-icon-no-border no-margin">
+                                                                    <i class="far fa-edit icon-sm"></i>
+                                                                </a>
+                                                                <a id="deleteBtn"
+                                                                    onclick="return confirmDelete('/delete-location', '<%- location.id%>')"
+                                                                    class="btn btn-icon btn-icon-no-border no-margin">
+                                                                    <i class="fas fa-trash-alt icon-sm text-danger"></i>
+                                                                </a>
+                                                            </td>
+                                                        </tr>
+                                                        <% } %>
+                                                    </tbody>
+                                                </table>
                                             </div>
                                         </div>
                                     </div>
@@ -100,7 +107,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
+        </div>
     </div>
     <!-- page-body-wrapper ends -->
     </div>
@@ -113,7 +122,8 @@
     <script src="../vendors/chart.js/Chart.min.js"></script>
     <script src="../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="../vendors/progressbar.js/progressbar.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
     <!-- End plugin js for this page -->
     <!-- inject:js -->
@@ -138,11 +148,7 @@
     <script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
-        <script>
-            $(document).ready(function() {
-                $('#locations').DataTable();
-            });
-        </script>
+    <%- include('../partials/dataTable.ejs', {tableID : '#locations'}); %>
 </body>
 
 </html>
