--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
@@ -36,83 +37,92 @@
 <body>
     <div class="container-scroller">
         <%- include('../partials/navbar.ejs' , {user}); %>
-            <div class="container-fluid page-body-wrapper">
-                <%- include('../partials/sidebar.ejs' , {user}); %>
-                    <div class="main-panel">
-                        <div class="content-wrapper">
-                            <div class="row">
-                                <div class="col-lg-12 d-flex flex-column">
-                                    <div class="row flex-grow">
-                                        <div class="col-12 grid-margin stretch-card">
-                                            <div class="card card-rounded">
-                                                <div class="card-body">
-                                                    <div class="d-sm-flex justify-content-between align-items-start">
-                                                        <div>
-                                                            <h4 class="card-title card-title-dash">Users</h4>
-                                                        </div>
-                                                        <div>
-                                                            <a href="/create-user" class="btn btn-primary btn-icon-text" type="button"><i class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add User</a>
-                                                        </div>
-                                                    </div>
-                                                    <br>
-                                                    <div class="table-responsive  mt-1">
-                                                        <table id="users" class="table table-hover stripe">
-                                                            <thead>
-                                                                <tr>
-                                                                    <th>Name</th>
-                                                                    <th>Role</th>
-                                                                    <th>Email</th>
-                                                                    <th>Phone</th>
-                                                                    <th>Plan</th>
-                                                                    <th>Action</th>
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                                <%if(users){%>
-                                                                    <% for(const user of users) { %>
-                                                                        <tr>
-                                                                            <td>
-                                                                                <a class="btn-link" href="/view-user/<%- user.id%>">
-                                                                                    <%- user.personalInfo.firstName + ' ' + user.personalInfo.lastName %>
-                                                                                        <% if(!user.hasAllInformation) {%>
-                                                                                            <i class="mdi mdi-alert text-warning" style="padding-left: 10px;"></i>
-                                                                                            <%}%>
+        <div class="container-fluid page-body-wrapper">
+            <%- include('../partials/sidebar.ejs' , {user}); %>
+            <div class="main-panel">
+                <div class="content-wrapper">
+                    <div class="row">
+                        <div class="col-lg-12 d-flex flex-column">
+                            <div class="row flex-grow">
+                                <div class="col-12 grid-margin stretch-card">
+                                    <div class="card card-rounded">
+                                        <div class="card-body">
+                                            <div class="d-sm-flex justify-content-between align-items-start">
+                                                <div>
+                                                    <h4 class="card-title card-title-dash">Users</h4>
+                                                </div>
+                                                <div>
+                                                    <a href="/create-user" class="btn btn-primary btn-icon-text"
+                                                        type="button"><i
+                                                            class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add
+                                                        User</a>
+                                                </div>
+                                            </div>
+                                            <br>
+                                            <div class="table-responsive  mt-1">
+                                                <table id="users" class="table table-hover stripe">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Name</th>
+                                                            <th>Role</th>
+                                                            <th>Email</th>
+                                                            <th>Phone</th>
+                                                            <th>Plan</th>
+                                                            <th>Action</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <% if(users) { %>
+                                                        <% for(const user of users) { %>
+                                                        <tr>
+                                                            <td>
+                                                                <a class="btn-link" href="/view-user/<%- user.id%>">
+                                                                    <%- user.personalInfo.firstName + ' ' + user.personalInfo.lastName %>
+                                                                    <% if(!user.hasAllInformation) {%>
+                                                                    <i class="mdi mdi-alert text-warning"
+                                                                        style="padding-left: 10px;"></i>
+                                                                    <%}%>
                                                                                 </a>
                                                                             </td>
                                                                             <td>
                                                                                 <%- user.role%>
-                                                                            </td>
-                                                                            <td>
-                                                                                <%- user.email%>
-                                                                            </td>
-                                                                            <td>
-                                                                                <%- user.personalInfo.phoneNumber %>
-                                                                            </td>
+                                                            </td>
+                                                            <td>
+                                                                <%- user.email%>
+                                                            </td>
+                                                            <td>
+                                                                <%- user.personalInfo.phoneNumber %>
+                                                            </td>
 
-                                                                            <td>
-                                                                                <%- user.membershipInfo.plan%>
-                                                                            </td>
+                                                            <td>
+                                                                <%- user.membershipInfo.plan%>
+                                                            </td>
 
-                                                                            <td>
-                                                                                <a href="/edit-user/<%- user.id%>?url=/users" type="button" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                    <i class="far fa-edit icon-sm"></i>
-                                                                                </a>
+                                                            <td>
+                                                                <a href="/edit-user/<%- user.id%>?url=/users"
+                                                                    type="button"
+                                                                    class="btn btn-icon btn-icon-no-border no-margin">
+                                                                    <i class="far fa-edit icon-sm"></i>
+                                                                </a>
 
-                                                                                <a class="btn btn-icon btn-icon-no-border no-margin manage-billing-button" style="margin: 0;" type="submit" value="<%- user.billingID%>" email="<%- user.email%>">
-                                                                                    <i class="fab fa-stripe-s icon-sm"></i>
-                                                                                </a>
+                                                                <a class="btn btn-icon btn-icon-no-border no-margin manage-billing-button"
+                                                                    style="margin: 0;" type="submit"
+                                                                    value="<%- user.billingID%>"
+                                                                    email="<%- user.email%>">
+                                                                    <i class="fab fa-stripe-s icon-sm"></i>
+                                                                </a>
 
-                                                                                <a id="deleteBtn" onclick="return confirmDelete('/delete-user', '<%- user.id%>')" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                    <i class="fas fa-trash-alt icon-sm text-danger"></i>
-                                                                                </a>
-                                                                            </td>
-                                                                        </tr>
-                                                                        <%}%>
-                                                                            <%}%>
-                                                            </tbody>
-                                                        </table>
-                                                    </div>
-                                                </div>
+                                                                <a id="deleteBtn"
+                                                                    onclick="return confirmDelete('/delete-user', '<%- user.id%>')"
+                                                                    class="btn btn-icon btn-icon-no-border no-margin">
+                                                                    <i class="fas fa-trash-alt icon-sm text-danger"></i>
+                                                                </a>
+                                                            </td>
+                                                        </tr>
+                                                        <% } %>
+                                                        <% } %>
+                                                    </tbody>
+                                                </table>
                                             </div>
                                         </div>
                                     </div>
@@ -120,7 +130,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
+        </div>
     </div>
     <!-- page-body-wrapper ends -->
     </div>
@@ -133,7 +145,8 @@
     <script src="../vendors/chart.js/Chart.min.js"></script>
     <script src="../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="../vendors/progressbar.js/progressbar.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
     <!-- End plugin js for this page -->
     <!-- inject:js -->
@@ -159,12 +172,7 @@
     <script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
-
-        <script>
-            $(document).ready(function() {
-                $('#users').DataTable();
-            });
-        </script>
+    <%- include('../partials/dataTable.ejs', {tableID : '#users'}); %>
 </body>
 
 </html>
